Create tablet layout

--- a/homepage.html
+++ b/homepage.html
@@ -10,11 +10,11 @@
     <div class="about-block">
         <div class="about-background"></div>
             <div class="about-content">
-                <div class="about-visual">
+                <div class="about-info">
+                 <div class="about-visual">
                     <h1 class="person-header">Lorem ipsum</h1>
                     <img src="author.jpg" alt="" class="person-img">
-                </div>
-                <div class="about-info">
+                 </div>
                     <section class="about-text">
                         <h2 class="info-header">About me</h2>
                         <p class="info-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos tempore qui beatae animi eum aspernatur cupiditate impedit laboriosam eveniet laudantium maiores corporis molestiae, autem atque expedita. Iusto repellat inventore dolor. Lonsectetur adipisicing elit. Recusandae suscipit architecto soluta ipsum, doloribus sed qui maxime aut, in earum voluptates voluptatem minima accusamus necessitatibus aliquam optio nostrum quia ullam.</p>
@@ -117,28 +117,28 @@
             </div>
     </main>
     <footer>
-        <section class="footer-info">
-            <h2 class="footer-header">Contact me</h2>
-            <p class="call-to-action">Please get in touch if you think our work could be mutually beneficial!</p>
-            <p class="address">1234 Random Road<br>Random Town, Random country 12345</p>
-
-            <a href="tel:+12345678900" class="phone-info" rel="noopener noreferrer">
-                <img src="phone.svg" alt="Phone" class="svg">
-                <p class="phone">+12345678900</p>
-            </a>
+        <div class="footer-content">
+            <section class="footer-info">
+                <h2 class="footer-header">Contact me</h2>
+                <p class="call-to-action">Please get in touch if you think our work could be mutually beneficial!</p>
+                <p class="address">1234 Random Road<br>Random Town, Random country 12345</p>
+                <a href="tel:+12345678900" class="phone-info" rel="noopener noreferrer">
+                    <img src="phone.svg" alt="Phone" class="svg">
+                    <p class="phone">+12345678900</p>
+                </a>
             
-            <a href="mailto:not.real.email@gmail.com" class="mail-info" rel="noopener noreferrer">
-                <img src="mail.svg" alt="Email" class="svg">
-                <p class="mail">not.real.email@gmail.com</p>
-            </a>
-
-            <div class="footer-icons">
-                <a href="https://github.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github" class="svg"></a>
-                <a href="https://linkedin.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" alt="Linkedin" class="svg"></a>
-                <a href="https://x.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" alt="Twitter" class="svg"></a>
-            </div>
-        </section>
-        <img src="author.jpg" alt="" class="footer-img">
+                <a href="mailto:not.real.email@gmail.com" class="mail-info" rel="noopener noreferrer">
+                    <img src="mail.svg" alt="Email" class="svg">
+                    <p class="mail">not.real.email@gmail.com</p>
+                </a>
+                <div class="footer-icons">
+                    <a href="https://github.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github" class="svg"></a>
+                    <a href="https://linkedin.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" alt="Linkedin" class="svg"></a>
+                    <a href="https://x.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" alt="Twitter" class="svg"></a>
+                </div>
+            </section>
+            <img src="author.jpg" alt="" class="footer-img">
+        </div>
     </footer>
 </body>
 </html>
