Remake desktop and mobile layout

--- a/homepage.html
+++ b/homepage.html
@@ -12,18 +12,18 @@
             <div class="about-content">
                 <div class="about-info">
                  <div class="about-visual">
-                    <h1 class="person-header">Lorem ipsum</h1>
+                    <h1 class="person-header">Fellow WebDev</h1>
                     <img src="author.jpg" alt="" class="person-img">
                  </div>
                     <section class="about-text">
                         <h2 class="info-header">About me</h2>
                         <p class="info-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos tempore qui beatae animi eum aspernatur cupiditate impedit laboriosam eveniet laudantium maiores corporis molestiae, autem atque expedita. Iusto repellat inventore dolor. Lonsectetur adipisicing elit. Recusandae suscipit architecto soluta ipsum, doloribus sed qui maxime aut, in earum voluptates voluptatem minima accusamus necessitatibus aliquam optio nostrum quia ullam.</p>
-                    </section>
                     <div class="header-icons">
                         <a href="https://github.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github" class="svg"></a>
                         <a href="https://linkedin.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" alt="Linkedin" class="svg"></a>
                         <a href="https://x.com/" rel="noopener noreferrer"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" alt="Twitter" class="svg"></a>
                     </div>
+                    </section>
                 </div>
             </div>
     </div>
